--- a/FermaOnline/Views/Experiment/Show.cshtml
+++ b/FermaOnline/Views/Experiment/Show.cshtml
@@ -28,7 +28,7 @@
             <div class="card-body">
                 <div class="table-responsive">
                     <table class="table ">
-                        <thead>ez 
+                        <thead> 
                             <tr>
                                 <th>Data</th>
                                 @foreach (var survey in Model.SurveysList)
@@ -40,20 +40,20 @@
                         <tbody>
                             <tr>
                                 <td>Cage</td>
-                                @foreach (var survey in Model.SurveysList)
-                                {
-                                    <td>
-                                        <table class="table mb-0">
-                                            <tr>
-                                                @for (int i = 0; i < Model.CageNumber; i++)
-                                                {
-                                                    <td>@i </td>
-                                                }
-                                                 
-
-                                            </tr>
-                                        </table>
-                                    </td>
+                                @{ char[] alphabet = "ABCDEFGHIJKLMNOPQRSTUVWXYZ".ToCharArray();
+                                    @foreach (var survey in Model.SurveysList)
+                                    {
+                                        <td>
+                                            <table class="table mb-0">
+                                                <tr>
+                                                    @for (int i = 0; i < Model.CageNumber; i++)
+                                                    {
+                                                    <td>@alphabet[i] </td>
+                                                    }
+                                                </tr>
+                                            </table>
+                                        </td>
+                                    }
                                 }
                             </tr>
                             <tr>
@@ -72,7 +72,7 @@
                                             <tr>
                                                 @foreach (var cage in survey.Cages)
                                                 {
-                                                    <td>@cage.CageQuantity </td>
+                                                    <td>@cage.CageQuantity</td>
                                                 }
                                             </tr>
                                         </table>
