--- a/FermaOnline/Views/Survey/Create.cshtml
+++ b/FermaOnline/Views/Survey/Create.cshtml
@@ -23,24 +23,24 @@
                         </div>
                     </div>
                     @{int count = 0;
-
+                        char[] alphabet = "ABCDEFGHIJKLMNOPQRSTUVWXYZ".ToCharArray();
                         for (int i = 0; i < ViewBag.CageNumber; i++)
                         {
-                            count++;
-           
+                            
+
                             <div class="sb-3 row">
-                                <label asp-for="@Model.Cages[i].CageQuantity">@count cage quantity</label>
+                                <label asp-for="@Model.Cages[i].CageQuantity">@alphabet[count] cage quantity</label>
                                 <div class="col-sm-10">
                                     <input asp-for="@Model.Cages[i].CageQuantity" class="form-control " />
                                 </div>
                             </div>
                             <div class="mb-3 row">
-                                <label asp-for="@Model.Cages[i].GroupWeight">@count cage group weight</label>
+                                <label asp-for="@Model.Cages[i].GroupWeight">@alphabet[count] cage group weight</label>
                                 <div class="col-sm-10">
                                     <input type="number" step="0.01" asp-for="@Model.Cages[i].GroupWeight" class="form-control " />
                                 </div>
                             </div>
-
+                            count++;
                         }
                     }
                     @if (ViewBag.IsFirstSurvay)
