--- a/FermaOnline/Views/Experiment/Show.cshtml
+++ b/FermaOnline/Views/Experiment/Show.cshtml
@@ -1,22 +1,35 @@
 ﻿@model Experiment
-
+   
 <div class="container p-3">
     <div class="row pt-4">
-        <a asp-action="Index" class="btn btn-primary btn-circle"><</a>
         <div class="card shadow mb-4">
             <div class="card-header py-3">
-            <h2 class="text-primary">@Model.Name</h2>
-            <a type="button" class="btn btn-primary col-6 text-right" asp-controller="Survey" asp-route-Id="@Model.Id" asp-action="Create">Add survey</a>
+                <div class="d-flex justify-content-between">
+                    <a asp-action="Index" class="btn btn-primary btn-lg ">Back</a>
+                    <h2 class="text-primary center">@Model.Name</h2>
+                    <a type="button" class="btn btn-primary btn-lg " asp-controller="Survey" asp-route-Id="@Model.Id" asp-action="Create">Add survey</a>
+                </div>
+
             </div>
             <div class="card-body">
+                <div class="d-flex justify-content-between">
+                    <p class="align-text-bottom"><span class="fw-bold">id:</span> @Model.Code </p>
+                    <p><span class="fw-bold">Author:</span> Jerzy Pastuszak</p>
+                </div>
                 @{var TextSpecies = @Model.Status ? "This experiment is conduct on" : "This experiment was conducted on";
-                    <p>@TextSpecies @Model.Species</p>
+                    <p class="fst-italic">@TextSpecies @Model.Species</p>
                 }
-            <p>id:@Model.Code </p>
-                <p class="lh-base">@Html.Raw(@Model.Description)</p> 
+
+                <p class=".fs-1 text fw-bold">Abstract:</p>
+                <p>@Model.ShortDescription</p>
+
+                <p class=".fs-1 text fw-bold">Description:</p>
+                <p class="lh-base">@Html.Raw(@Model.Description)</p>
+
+
+
             </div>
         </div>
-
     </div>
     <br />
 
@@ -29,7 +42,7 @@
             <div class="card-body">
                 <div class="table-responsive">
                     <table class="table ">
-                        <thead> 
+                        <thead>
                             <tr>
                                 <th>Data</th>
                                 @foreach (var survey in Model.SurveysList)
@@ -49,7 +62,7 @@
                                                 <tr>
                                                     @for (int i = 0; i < Model.CageNumber; i++)
                                                     {
-                                                    <td>@alphabet[i] </td>
+                                                        <td>@alphabet[i] </td>
                                                     }
                                                 </tr>
                                             </table>
@@ -301,41 +314,25 @@
 
         </script>
     }
-
-
-    @foreach (var img in @Model.Images)
-    {
-
-        <p>@img.FileName"</p>
-        // <img src="~/img/ExperimentImages/@img.FileName" alt="@img.FileName" />
-
-    }
     <div class="card shadow mb-4">
         <div class="card-header py-3">
-            <h6 class="m-0 font-weight-bold text-primary">Images</h6>
+            <h6 class="m-0 font-weight-bold text-primary">Nutrition Formula</h6>
         </div>
         <div class="card-body">
-            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img class="d-block w-100" src="~/img/undraw_profile_1.svg" alt="First slide">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="~/img/undraw_profile_2.svg" alt="Second slide">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="~/img/undraw_profile_3.svg" alt="Third slide">
-                    </div>
-                </div>
-                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
+
+            <button class="btn" style="width:100%"><i class="fa fa-download"></i> Download Formula</button>
+
+        </div>
+    </div>
+
+    <div class="card shadow mb-4">
+        <div class="card-header py-3">
+            <h6 class="m-0 font-weight-bold text-primary">Materials and Methods</h6>
+        </div>
+        <div class="card-body">
+
+            <a href="#">Preparation_of_CoProTex.pdf</a>
+
         </div>
     </div>
 </div>
