--- a/FermaOnline/Views/Shared/_Layout.cshtml
+++ b/FermaOnline/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
                 <div class="sidebar-brand-icon">
-                    <img class="sidebar-card-illustration mb-2" src="~/img/.png" alt="...">
+                    <!--<img class="sidebar-card-illustration mb-2" src="~/img/.png" alt="...">-->
                 </div>
                 <div class="sidebar-brand-text mx-3">Ferma Online</div>
             </a>
@@ -222,7 +222,7 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Imie Nazwisko</span>
+                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Name</span>
                                 <img class="img-profile rounded-circle"
                                      src="~/img/undraw_profile.svg">
                             </a>
